cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
PROJECT(idbms)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive")
MESSAGE("Begin to build " ${PROJECT_NAME})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})

ADD_SUBDIRECTORY(src/client)
ADD_SUBDIRECTORY(src/server)