cmake_minimum_required(VERSION 3.1 FATAL_ERROR)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
PROJECT(idbm)
MESSAGE("Begin to build " ${PROJECT_NAME})
message("cxx" ${CXXCOM})
MESSAGE(STATUS "This is PROJECT_BINARY_DIR dir " ${PROJECT_BINARY_DIR})
MESSAGE(STATUS "This is PROJECT_SOURCE_DIR dir " ${PROJECT_SOURCE_DIR})
set(PATH1 ${PROJECT_BINARY_DIR})
set(PATH2 ${PROJECT_SOURCE_DIR})
CONFIGURE_FILE(${PROJECT_SOURCE_DIR}/src/common/params_deliver.h.in ${PROJECT_SOURCE_DIR}/src/common/params_deliver.h)

if (DEBUG)
    add_definitions(-DDEBUG)
ENDIF ()

ADD_SUBDIRECTORY(src/client)
ADD_SUBDIRECTORY(src/server)
